@@ -18,15 +18,16 @@
 package org.apache.spark.launcher;
 
 /**
- * This helper class is used to place the all `--add-opens` options
+ * This helper class is used to place some JVM runtime options(eg: `--add-opens`)
  * required by Spark when using Java 17. `DEFAULT_MODULE_OPTIONS` has added
- * `-XX:+IgnoreUnrecognizedVMOptions` to be compatible with Java 8 and Java 11.
+ * `-XX:+IgnoreUnrecognizedVMOptions` to be robust.
  *
  * @since 3.3.0
  */
 public class JavaModuleOptions {
     private static final String[] DEFAULT_MODULE_OPTIONS = {
       "-XX:+IgnoreUnrecognizedVMOptions",
+      "--add-modules=jdk.incubator.vector",
       "--add-opens=java.base/java.lang=ALL-UNNAMED",
       "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
       "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
@@ -42,19 +43,18 @@ public class JavaModuleOptions {
       "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
       "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED",
       "--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED",
-      "-Djdk.reflect.useDirectMethodHandle=false"};
+      "-Djdk.reflect.useDirectMethodHandle=false",
+      "-Dio.netty.tryReflectionSetAccessible=true"};
 
     /**
-     * Returns the default Java options related to `--add-opens' and
-     * `-XX:+IgnoreUnrecognizedVMOptions` used by Spark.
+     * Returns the default JVM runtime options used by Spark.
      */
     public static String defaultModuleOptions() {
       return String.join(" ", DEFAULT_MODULE_OPTIONS);
     }
 
     /**
-     * Returns the default Java option array related to `--add-opens' and
-     * `-XX:+IgnoreUnrecognizedVMOptions` used by Spark.
+     * Returns the default JVM runtime option array used by Spark.
      */
     public static String[] defaultModuleOptionArray() {
       return DEFAULT_MODULE_OPTIONS;
