@@ -83,6 +83,7 @@ class SparkSubmitCommandBuilder extends AbstractCommandBuilder {
   private static final Map<String, String> specialClasses = new HashMap<>();
   static {
     specialClasses.put("org.apache.spark.repl.Main", "spark-shell");
+    specialClasses.put("org.apache.spark.sql.application.ConnectRepl", "connect-shell");
     specialClasses.put("org.apache.spark.sql.hive.thriftserver.SparkSQLCLIDriver",
       SparkLauncher.NO_RESOURCE);
     specialClasses.put("org.apache.spark.sql.hive.thriftserver.HiveThriftServer2",
@@ -245,13 +246,21 @@ class SparkSubmitCommandBuilder extends AbstractCommandBuilder {
 
     if (mainClass != null) {
       args.add(parser.CLASS);
-      args.add(mainClass);
+      if (isRemote && "1".equals(getenv("SPARK_SCALA_SHELL"))) {
+        args.add("org.apache.spark.sql.application.ConnectRepl");
+      } else {
+        args.add(mainClass);
+      }
     }
 
     args.addAll(parsedArgs);
 
     if (appResource != null) {
-      args.add(appResource);
+      if (isRemote && "1".equals(getenv("SPARK_SCALA_SHELL"))) {
+        args.add("connect-shell");
+      } else {
+        args.add(appResource);
+      }
     }
 
     args.addAll(appArgs);
@@ -267,6 +276,12 @@ class SparkSubmitCommandBuilder extends AbstractCommandBuilder {
     Map<String, String> config = getEffectiveConfig();
     boolean isClientMode = isClientMode(config);
     String extraClassPath = isClientMode ? config.get(SparkLauncher.DRIVER_EXTRA_CLASSPATH) : null;
+    String defaultExtraClassPath = config.get(SparkLauncher.DRIVER_DEFAULT_EXTRA_CLASS_PATH);
+    if (extraClassPath == null || extraClassPath.trim().isEmpty()) {
+      extraClassPath = defaultExtraClassPath;
+    } else {
+      extraClassPath += File.pathSeparator + defaultExtraClassPath;
+    }
 
     List<String> cmd = buildJavaCommand(extraClassPath);
     // Take Thrift/Connect Server as daemon
@@ -303,8 +318,9 @@ class SparkSubmitCommandBuilder extends AbstractCommandBuilder {
         config.get(SparkLauncher.DRIVER_EXTRA_LIBRARY_PATH));
     }
 
-    // SPARK-36796: Always add default `--add-opens` to submit command
+    // SPARK-36796: Always add some JVM runtime default options to submit command
     addOptionString(cmd, JavaModuleOptions.defaultModuleOptions());
+    addOptionString(cmd, "-Dderby.connection.requireAuthentication=false");
     cmd.add("org.apache.spark.deploy.SparkSubmit");
     cmd.addAll(buildSparkSubmitArgs());
     return cmd;
@@ -490,37 +506,29 @@ class SparkSubmitCommandBuilder extends AbstractCommandBuilder {
     @Override
     protected boolean handle(String opt, String value) {
       switch (opt) {
-        case MASTER:
-          master = value;
-          break;
-        case REMOTE:
+        case MASTER -> master = value;
+        case REMOTE -> {
+          isRemote = true;
           remote = value;
-          break;
-        case DEPLOY_MODE:
-          deployMode = value;
-          break;
-        case PROPERTIES_FILE:
-          propertiesFile = value;
-          break;
-        case DRIVER_MEMORY:
-          conf.put(SparkLauncher.DRIVER_MEMORY, value);
-          break;
-        case DRIVER_JAVA_OPTIONS:
-          conf.put(SparkLauncher.DRIVER_EXTRA_JAVA_OPTIONS, value);
-          break;
-        case DRIVER_LIBRARY_PATH:
-          conf.put(SparkLauncher.DRIVER_EXTRA_LIBRARY_PATH, value);
-          break;
-        case DRIVER_CLASS_PATH:
-          conf.put(SparkLauncher.DRIVER_EXTRA_CLASSPATH, value);
-          break;
-        case CONF:
+        }
+        case DEPLOY_MODE -> deployMode = value;
+        case PROPERTIES_FILE -> propertiesFile = value;
+        case DRIVER_MEMORY -> conf.put(SparkLauncher.DRIVER_MEMORY, value);
+        case DRIVER_JAVA_OPTIONS -> conf.put(SparkLauncher.DRIVER_EXTRA_JAVA_OPTIONS, value);
+        case DRIVER_LIBRARY_PATH -> conf.put(SparkLauncher.DRIVER_EXTRA_LIBRARY_PATH, value);
+        case DRIVER_DEFAULT_CLASS_PATH ->
+          conf.put(SparkLauncher.DRIVER_DEFAULT_EXTRA_CLASS_PATH, value);
+        case DRIVER_CLASS_PATH -> conf.put(SparkLauncher.DRIVER_EXTRA_CLASSPATH, value);
+        case CONF -> {
           checkArgument(value != null, "Missing argument to %s", CONF);
           String[] setConf = value.split("=", 2);
           checkArgument(setConf.length == 2, "Invalid argument to %s: %s", CONF, value);
+          if (setConf[0].equals("spark.remote")) {
+            isRemote = true;
+          }
           conf.put(setConf[0], setConf[1]);
-          break;
-        case CLASS:
+        }
+        case CLASS -> {
           // The special classes require some special command line handling, since they allow
           // mixing spark-submit arguments with arguments that should be propagated to the shell
           // itself. Note that for this to work, the "--class" argument must come before any
@@ -530,25 +538,22 @@ class SparkSubmitCommandBuilder extends AbstractCommandBuilder {
             allowsMixedArguments = true;
             appResource = specialClasses.get(value);
           }
-          break;
-        case KILL_SUBMISSION:
-        case STATUS:
+        }
+        case KILL_SUBMISSION, STATUS -> {
           isSpecialCommand = true;
           parsedArgs.add(opt);
           parsedArgs.add(value);
-          break;
-        case HELP:
-        case USAGE_ERROR:
-        case VERSION:
+        }
+        case HELP, USAGE_ERROR, VERSION -> {
           isSpecialCommand = true;
           parsedArgs.add(opt);
-          break;
-        default:
+        }
+        default -> {
           parsedArgs.add(opt);
           if (value != null) {
             parsedArgs.add(value);
           }
-          break;
+        }
       }
       return true;
     }
